# llmstxt-gen

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  requirements-local.txt
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
backend/: .pylintrc  Dockerfile  config_cli.py  main.py  main_test.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py
backend/examples/: config_sdk_example.py
backend/src/api/: DEVELOPMENT_REPORT.md  README.md  __init__.py
backend/src/api/auth/: __init__.py  jwt.py  middleware.py  rbac.py
backend/src/api/core/: __init__.py  app.py  dependencies.py  exceptions.py  middleware.py
backend/src/api/routers/: __init__.py  auth.py  system.py
backend/src/api/schemas/: __init__.py  response.py
backend/src/api/tests/: system_test.py  system_test_simple.py  test_api_framework.py  test_authentication.py
backend/src/api/utils/: __init__.py  pagination.py  security.py  validation.py
backend/src/config/: API.md  __init__.py  api.py  cli.py  core.py  exceptions.py  loader.py  management.py  notifications.py  priority.py  rollback.py  routes.py  schemas.py  sdk.py  validator.py  watcher.py  web.py
backend/src/database/: __init__.py
backend/src/database/models/: __init__.py  base.py  document.py  project.py  system.py  task.py  user.py
backend/src/database/schemas/: __init__.py  base.py  document.py  project.py  system.py  task.py  user.py
backend/src/database/tests/: test_basic.py  test_models.py  test_models_simple.py
backend/src/database/utils/: __init__.py  backup.py  connection.py  migrations.py  session.py
backend/src/monitoring/: __init__.py  alerts.py  config.py  health.py  health_api.py  integration.py  log_analysis.py  logger.py  metrics.py
backend/src/monitoring/filters/: __init__.py  sensitive_data.py
backend/src/monitoring/formatters/: __init__.py  structured.py
backend/src/monitoring/handlers/: __init__.py  async_file.py
backend/src/services/: __init__.py  document_service.py  service_factory.py
backend/templates/: error.html
backend/templates/config/: dashboard.html  editor.html  history.html  validator.html
backend/tests/: conftest.py  test_config_management.py
config/: alerts.yaml  default.yaml  development.yaml  logging.yaml  monitoring.yaml  production.yaml
(+70 files in other folders)
